--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="row">
             <div class="col-lg-6">
                 <h1>Welcome to My Portfolio</h1>
-                <p>Hello! I'm Your Name, a web developer with a passion for creating modern and responsive websites.</p>
+                <p>I am a Computer Science and Mathematics student at the University of Manchester with a passion for problem-solving using computational methods and mathematics. I have a proven leadership record as President of the Omani Students Society, where I helped transform the society into a global leader. I am skilled in AI, Machine Learning, Web Development, and have strong programming and analytical abilities.</p>
                 <a href="projects.html" class="btn btn-primary">See My Projects</a>
             </div>
             <div class="col-lg-6">
