--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Navbar (fixed-top for sticky navigation) -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Your Name</a>
+            <a class="navbar-brand" href="#">Ahmed Al-Hajri</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
