--- a/cv.html
+++ b/cv.html
@@ -14,7 +14,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Your Name</a>
+            <a class="navbar-brand" href="#">Ahmed Al-Hajri</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -64,7 +64,7 @@
 
     <!-- Footer -->
     <footer class="bg-light text-center py-3">
-        <p>&copy; 2025 Your Name | All Rights Reserved</p>
+        <p>&copy; 2025 Ahmed Al-Hajri | All Rights Reserved</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
