--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     <!-- Footer Section -->
     <footer class="bg-light text-center py-3">
-        <p>&copy; 2025 Your Name | All Rights Reserved</p>
+        <p>&copy; 2025 Ahmed Al-Hajri | All Rights Reserved</p>
     </footer>
 
     <!-- Bootstrap JS & Popper.js (for responsive navbar) -->
