--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Contact Me">
     <meta name="keywords" content="contact, email, portfolio">
     <meta name="author" content="Your Name">
-    <title>Your Name - Contact</title>
+    <title>Ahmed Al-Hajri - Contact</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
 </head>
@@ -44,7 +44,7 @@
 
     <!-- Footer -->
     <footer class="bg-light text-center py-3">
-        <p>&copy; 2025 Your Name | All Rights Reserved</p>
+        <p>&copy; 2025 Ahmed Al-Hajri | All Rights Reserved</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
