--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A brief description of your portfolio or homepage.">
-    <meta name="keywords" content="portfolio, CV, projects, your name, web developer">
-    <meta name="author" content="Your Name">
-    <title>Your Name - Portfolio</title>
+    <meta name="keywords" content="portfolio, CV, projects, Ahmed Al-Hjri, web developer">
+    <meta name="author" content="Ahmed Al-Hjri">
+    <title>Ahmed Al-Hjri - Portfolio</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS (Optional) -->
@@ -48,14 +48,14 @@
                 <a href="projects.html" class="btn btn-primary">See My Projects</a>
             </div>
             <div class="col-lg-6">
-                <img src="images/your-photo.jpg" alt="Your Name" class="img-fluid rounded-circle" style="max-width: 80%;">
+                <img src="images/your-photo.jpg" alt="Ahmed Al-Hjri" class="img-fluid rounded-circle" style="max-width: 80%;">
             </div>
         </div>
     </div>
 
     <!-- Footer Section -->
     <footer class="bg-light text-center py-3">
-        <p>&copy; 2025 Your Name | All Rights Reserved</p>
+        <p>&copy; 2025 Ahmed Al-Hjri | All Rights Reserved</p>
     </footer>
 
     <!-- Bootstrap JS & Popper.js (for responsive navbar) -->
