--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <a href="projects.html" class="btn btn-primary">See My Projects</a>
             </div>
             <div class="col-lg-6">
-                <img src="images/your-photo.jpg" alt="Ahmed Al-Hjri" class="img-fluid rounded-circle" style="max-width: 80%;">
+                <img src="images/me.jpg" alt="Ahmed Al-Hjri" class="img-fluid rounded-circle" style="max-width: 80%;">
             </div>
         </div>
     </div>
