--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="A brief description of your portfolio or homepage.">
     <meta name="keywords" content="portfolio, CV, projects, Ahmed Al-Hajri, web developer">
     <meta name="author" content="Ahmed Al-Hajri">
+    <meta name="google-site-verification" content="BS-wt3DIZGHTWAnlKFduUY2DvUS_NT2IthWWK5mEUk4" />
     <title>Ahmed Al-Hajri - Portfolio</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
